2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(GlassPaneDispatcher.acquireComponentForMouseEvent): Use the
	frame's layeredPane as parent instead of the content pane
	when searching for the event target. This way a possibly set menubar
	is also included in the search.

2005-11-08  Lillian Angel  <langel@redhat.com>

	* java/awt/Window.java
	(setLocationRelativeTo): Changed x and y to use getLocationOnScreen
	and moved setLocation call outside of check.
	* javax/swing/JOptionPane.java
	(createDialog): Moved pack call and setLocationRelativeTo call here
	and removed these calls from all other functions that call
	createDialog. Also, removed FIXME, since call to setLocationRelativeTo
	fixes this.
	(showConfirmDialog): Removed pack and setLocationRelativeTo calls.
	(showConfirmDialog): Likewise.
	(showConfirmDialog): Likewise.
	(showConfirmDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showMessageDialog): Likewise.
	(showMessageDialog): Likewise.
	(showOptionDialog): Likewise.
	* javax/swing/JTree.java
	(JTree): Should not use a shared instance of the selection model. It
	is a problem when one application has two different trees.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(paintRow): Changed parameter to be the focus of the tree.
	(updateCurrentVisiblePath): Adjusted root path incase the root is hidden.

2005-11-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/awt/event/InvocationEvent.java:
	(exception): Removed unnecessary field.
	(dispatch): Removed reference to field exception.
	(getException): If throwable is an Exception, return a casted version, 
	otherwise return null.
	(getThrowable): Improved docs.

2005-11-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/SwingUtilities.java: